[gd_scene load_steps=7 format=2]

[ext_resource path="res://graphics/images/BULLET.png" type="Texture" id=1]
[ext_resource path="res://source/game/Gun/Bullet.gd" type="Script" id=2]
[ext_resource path="res://sounds/effects/gunshot.ogg" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="SendUpdate" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
attenuation = 0.378929

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 3 )
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="SendUpdate" to="." method="_send_update"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
